@@ -6,38 +6,52 @@
  */
 import org.apache.tools.ant.filters.ReplaceTokens
 
+description = 'Hibernate\'s core ORM functionality'
+
 apply from: rootProject.file( 'gradle/published-java-module.gradle' )
 apply plugin: 'antlr'
 apply plugin: 'hibernate-matrix-testing'
 apply plugin: 'org.hibernate.build.gradle.xjc'
 
-description = 'Hibernate\'s core ORM functionality'
+ext {
+    jaxbTargetDir = file( "${buildDir}/generated-src/jaxb/main" )
+}
+
+sourceSets.main {
+    java.srcDir project.jaxbTargetDir
+}
+
+sourceSets {
+    // resources inherently exclude sources
+    test {
+        resources {
+            setSrcDirs( ['src/test/java','src/test/resources'] )
+        }
+    }
+
+    testJavassist {
+        java {
+            compileClasspath += main.output + test.output
+            runtimeClasspath += main.output + test.output
+        }
+    }
+}
 
 configurations {
-    hibernateJpaModelGenTool {
-        description = "Dependencies for running the Hibernate JPA Metamodel Generator AnnotationProcessor tool"
-    }
     tests {
         description = 'Configuration for the produced test jar'
     }
+
+    //Configures the compile and runtime configurations for our javassist tests
+    //and includes the dependencies of the test task.
+    testJavassistCompile.extendsFrom testCompile
+    testJavassistRuntime.extendsFrom testRuntime
 }
 
 dependencies {
 
-    // ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-    // Java 9 ftw!
-    if ( JavaVersion.current().isJava9Compatible() ) {
-        xjc( 'com.sun.xml.bind:jaxb-impl:2.2.11' )
-        xjc( 'org.glassfish.jaxb:jaxb-xjc:2.2.11' )
-        xjc( 'org.jvnet.jaxb2_commons:jaxb2-basics:0.11.0' )
-        xjc( 'org.jvnet.jaxb2_commons:jaxb2-basics-ant:0.11.0' )
-        xjc( 'javax.activation:javax.activation-api:1.2.0' )
-        xjc( 'javax.annotation:jsr250-api:1.0' )
-    }
-    // ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-
     compile( libraries.jpa )
-    // Javassist is no longer the default enhancer but still required for other purposes, e.g. Scanning
+    // This can now be made provided
     compile( libraries.javassist )
     // Could be made optional?
     compile( libraries.byteBuddy )
@@ -55,6 +69,15 @@ dependencies {
     compile( libraries.commons_annotations )
     antlr( libraries.antlr )
 
+    // JAXB
+    compile( libraries.jaxb_api )
+    compile( libraries.jaxb_runtime )
+    xjc( libraries.jaxb_runtime )
+    xjc( libraries.jaxb_xjc )
+    xjc( libraries.jaxb2_basics )
+    xjc( libraries.jaxb2_basics_ant )
+    xjc( libraries.activation )
+
     provided( libraries.jacc )
     provided( libraries.validation )
     provided( libraries.ant )
@@ -70,11 +93,9 @@ dependencies {
     testCompile( libraries.mockito )
     testCompile( libraries.mockito_inline )
     testCompile( libraries.jodaTime )
+    testCompile( libraries.assertj )
 
-    testCompile( libraries.cdi ) {
-        // we need to force it to make sure we influence the one coming from arquillian
-        force=true
-    }
+    testCompile( libraries.cdi )
 
     testCompile( libraries.validator ) {
         // for test runtime
@@ -90,66 +111,74 @@ dependencies {
     testRuntime( libraries.javassist )
     testRuntime( libraries.byteBuddy )
     testRuntime( libraries.weld )
+    testRuntime( libraries.atomikos )
+    testRuntime( libraries.atomikos_jta )
     testRuntime(libraries.wildfly_transaction_client)
 
-	testCompile( project( ':hibernate-jpamodelgen' ) )
+    testAnnotationProcessor( project( ':hibernate-jpamodelgen' ) )
 
-    testCompile libraries.arquillian_junit_container
-    testCompile libraries.arquillian_protocol_servlet
     testCompile libraries.shrinkwrap_descriptors_api_javaee
     testCompile libraries.shrinkwrap_descriptors_impl_javaee
-    testCompile libraries.wildfly_arquillian_container_managed
 
     testCompile libraries.jboss_ejb_spec_jar
     testCompile libraries.jboss_annotation_spec_jar
+
+    // Additional tests requiring Javassist
+    // folder in src/javassist/java
+    testJavassistCompile libraries.javassist
 }
 
 jar {
     manifest {
-        mainAttributes( 'Main-Class': 'org.hibernate.Version' )
+        attributes(
+                'Main-Class': 'org.hibernate.Version',
 
-        instructionFirst 'Import-Package',
-            'javax.security.auth;resolution:=optional',
-            'javax.security.jacc;resolution:=optional',
-            'javax.validation;resolution:=optional',
-            'javax.validation.constraints;resolution:=optional',
-            'javax.validation.groups;resolution:=optional',
-            'javax.validation.metadata;resolution:=optional',
-            // TODO: Shouldn't have to explicitly list this, but the plugin
-            // generates it with a [1.0,2) version.
-            "javax.persistence;version=\"${project.jpaVersion.osgiName}\"",
-            // optionals
-            'javax.management;resolution:=optional',
-            'javax.naming.event;resolution:=optional',
-            'javax.naming.spi;resolution:=optional',
-            'org.apache.tools.ant;resolution:=optional',
-            'org.apache.tools.ant.taskdefs;resolution:=optional',
-            'org.apache.tools.ant.types;resolution:=optional',
-            '!javax.enterprise*',
-            'javax.enterprise.context.spi;resolution:=optional',
-            'javax.enterprise.inject.spi;resolution:=optional',
-            'javax.inject;resolution:=optional',
-            'net.bytebuddy.*;resolution:=optional'
-
-//        // TODO: Uncomment once EntityManagerFactoryBuilderImpl no longer
-//        // uses ClassLoaderServiceImpl.
-//        instruction 'Export-Package',
-//            'org.hibernate.boot.registry.classloading.internal',
-//            '*'
+                // BND Plugin instructions (for OSGi):
+                'Import-Package': [
+                        'javax.security.auth;resolution:=optional',
+                        // Make javax.security.jacc optional and do not reference a version range (because that's what we used to do)
+                        'javax.security.jacc;resolution:=optional;version=!',
+                        // Make javax.validation optional and do not reference a version range (because that's what we used to do)
+                        'javax.validation;resolution:=optional;version=!',
+                        'javax.validation.constraints;resolution:=optional;version=!',
+                        'javax.validation.groups;resolution:=optional;version=!',
+                        'javax.validation.metadata;resolution:=optional;version=!',
+                        // Make javax.enterprise optional and do not reference a version range (because that's what we used to do)
+                        '!javax.enterprise*',
+                        'javax.enterprise.context.spi;resolution:=optional;version=!',
+                        'javax.enterprise.inject.spi;resolution:=optional;version=!',
+                        // For JPA, we don't want to target the automatically generated range, but a specific version
+                        "javax.persistence;version=\"${project.jpaVersion.osgiName}\"",
+                        // optionals
+                        'javax.management;resolution:=optional',
+                        'javax.naming.event;resolution:=optional',
+                        'javax.naming.spi;resolution:=optional',
+                        'org.apache.tools.ant;resolution:=optional',
+                        'org.apache.tools.ant.taskdefs;resolution:=optional',
+                        'org.apache.tools.ant.types;resolution:=optional',
+                        'javax.inject;resolution:=optional',
+                        'net.bytebuddy.*;resolution:=optional',
+                        'org.objectweb.jonas_tm;resolution:=optional',
+                        'com.ibm.websphere.jtaextensions;resolution:=optional',
+                        // We must specify the version explicitly to allow Karaf
+                        // to use an older version of JAXB (the only one we can use in Karaf)
+                        "javax.xml.bind.*;version=\"${project.jaxbApiVersionOsgiRange}\"",
+                        // Temporarily support JTA 1.1 -- Karaf and other frameworks still
+                        // use it.  Without this, the plugin generates [1.2,2).
+                        'javax.transaction;version="[1.1,2)"',
+                        // Also import every package referenced in the code
+                        '*'
+                ].join( ',' ),
+                '-exportcontents': [
+                        // Legacy resource packages containing XSDs that were traditionally not exported
+                        "!org.hibernate.xsd.cfg",
+                        "!org.hibernate.xsd.mapping",
+                        // TODO: Uncomment once EntityManagerFactoryBuilderImpl no longer uses ClassLoaderServiceImpl.
+                        //'org.hibernate.boot.registry.classloading.internal',
+                        "*;version=${project.version}"
+                ].join( ',' ),
+        )
     }
-}
-
-ext {
-	jaxbTargetDir = file( "${buildDir}/generated-src/jaxb/main" )
-}
-
-sourceSets.main {
-    java.srcDir project.jaxbTargetDir
-}
-
-// resources inherently exclude sources
-sourceSets.test.resources {
-    setSrcDirs( ['src/test/java','src/test/resources'] )
 }
 
 //idea {
@@ -174,6 +203,9 @@ xjc {
     }
 }
 
+generateGrammarSource {
+    arguments += "-traceParser"
+}
 
 //sourceSets.main.sourceGeneratorsTask.dependsOn xjc
 //sourceSets.main.sourceGeneratorsTask.dependsOn generateGrammarSource
@@ -197,7 +229,7 @@ task copyBundleResources (type: Copy) {
 processTestResources.dependsOn copyBundleResources
 
 task testJar(type: Jar, dependsOn: testClasses) {
-    classifier = 'test'
+    archiveClassifier.set( 'test' )
     from sourceSets.test.output
 }
 
@@ -205,27 +237,51 @@ artifacts {
     tests testJar
 }
 
-processTestResources {
-    doLast {
-        copy {
-            from file( 'src/test/resources' )
-            into file( "${buildDir}/resources/test" )
-            include 'arquillian.xml'
-            include 'org/hibernate/test/wf/ddl/manifest.mf'
-            expand wildFlyInstallDir: project( ':hibernate-orm-modules' ).wildFlyInstallDir,
-                   hibernateMajorMinorVersion: "${project.ormVersion.family}",
-                   arquillianDeploymentExportDir: "${rootProject.buildDir.absolutePath}/arquillian-deployments"
-        }
-    }
-}
-
-test.dependsOn ':hibernate-orm-modules:prepareWildFlyForTests'
-
 test {
     systemProperty 'file.encoding', 'utf-8'
-    //Set the port-offset to match the offset in arquillian.xml
-    systemProperty 'jboss.socket.binding.port-offset', '137'
+
+    if ( gradle.ext.javaVersions.test.launcher.asInt() >= 9 ) {
+        // See org.hibernate.boot.model.naming.NamingHelperTest.DefaultCharset.set
+        jvmArgs( ['--add-opens', 'java.base/java.nio.charset=ALL-UNNAMED'] )
+        // Weld needs this to generate proxies
+        jvmArgs( ['--add-opens', 'java.base/java.security=ALL-UNNAMED'] )
+        jvmArgs( ['--add-opens', 'java.base/java.lang=ALL-UNNAMED'] )
+    }
+
     beforeTest { descriptor ->
         //println "Starting test: " + descriptor
     }
 }
+
+//Create the task that runs the integration tests found from the
+//configured source directory and uses the correct classpath.
+task testJavassist(type: Test) {
+    testClassesDirs = sourceSets.testJavassist.output.classesDirs
+    classpath = sourceSets.testJavassist.runtimeClasspath
+    //If you want to ensure that integration tests are run every time when you invoke
+    //this task, uncomment the following line.
+    //outputs.upToDateWhen { false }
+
+    if ( gradle.ext.javaToolchainEnabled ) {
+        // Configure version of Java tools
+        javaLauncher = javaToolchains.launcherFor {
+            languageVersion = gradle.ext.javaVersions.test.launcher
+        }
+
+        //  Configure JVM Options
+        jvmArgs( getProperty( 'toolchain.launcher.jvmargs' ).toString().split( ' ' ) )
+
+        // Display version of Java tools
+        doFirst {
+            logger.lifecycle "Testing javassist with '${javaLauncher.get().metadata.installationPath}'"
+        }
+    }
+
+    if ( gradle.ext.javaVersions.test.launcher.asInt() >= 9 ) {
+        // Javassist needs this to generate proxies
+        jvmArgs( ['--add-opens', 'java.base/java.lang=ALL-UNNAMED'] )
+    }
+}
+
+check.dependsOn testJavassist
+testJavassist.mustRunAfter test
