@@ -5,12 +5,25 @@
  * See the lgpl.txt file in the root directory or <http://www.gnu.org/licenses/lgpl-2.1.html>.
  */
 
+description = 'Integration for Proxool Connection pooling into Hibernate O/RM'
+
 apply from: rootProject.file( 'gradle/published-java-module.gradle' )
 
-description = 'Integration for Proxool Connection pooling into Hibernate O/RM'
 
 dependencies {
     compile project( ':hibernate-core' )
     compile( libraries.proxool )
     testCompile project( ':hibernate-testing' )
+}
+
+test {
+    if ( gradle.ext.javaVersions.test.launcher.asInt() >= 9 ) {
+        // Proxool needs this to define classes for some reason. Stack trace:
+        // 	at org.logicalcobwebs.cglib.core.ReflectUtils.defineClass(ReflectUtils.java:372)
+        //	at org.logicalcobwebs.cglib.core.AbstractClassGenerator.create(AbstractClassGenerator.java:193)
+        //	at org.logicalcobwebs.cglib.core.KeyFactory$Generator.create(KeyFactory.java:177)
+        //	at org.logicalcobwebs.cglib.core.KeyFactory.create(KeyFactory.java:149)
+        //	at org.logicalcobwebs.cglib.proxy.Enhancer.<clinit>(Enhancer.java:96)
+        jvmArgs( ['--add-opens', 'java.base/java.lang=ALL-UNNAMED'] )
+    }
 }
